--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/styles.css') }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="{{ url_for('home')}}">Home</a></li>
-            <li><a href="{{ url_for('tres')}}">3B</a></li>
-            <li><a href="{{ url_for('contact')}}">Contact</a></li>
-            <li><a href="{{ url_for('about')}}">Acerca de</a></li>
+            <li><a href="{{ url_for('Home') }}">Home</a></li>
+            <li><a href="{{ url_for('Tres') }}">3B</a></li>
+            <li><a href="{{ url_for('Contact') }}">Contact</a></li>
+            <li><a href="{{ url_for('Acerca de') }}">Acerca de</a></li>
             {% if user %}
             <li><a href="#">Logout</a></li>
             {% else %}
             <li><a href="#">Login</a></li>
             {% endif %}
-        </ul>
+        </ul> 
     </nav>
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
