--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
 nav {
     display: flex;
     justify-content: center;
@@ -95,9 +96,23 @@ nav li a:hover {
 .fa {
     font-size: 30px;
 }
+
 .fa-pencil {
     color: green;
 }
+
 .fa-trash {
     color: red;
+}
+
+table form {
+    display: inline-block;
+}
+
+table form button{
+    display: inline-block;
+}
+
+table a{
+    text-decoration: none;
 }
