--- a/app/templates/category/create_cat.html
+++ b/app/templates/category/create_cat.html
@@ -6,23 +6,30 @@ Crea Nueva Categoria
     
 {% block content %}
 <div class="form-container">
-        {% for message in get_flashed_messsages()%}
-        <p>{{ messsage }}</p>
-        {% endfor %}
    <form method="post">
-        <label for="category">Categoria</label><br>
-        <input type="text" 
-        name="category" 
-        id="category"
-        value="{{ request.form['category'] }}"
-        required><br>
-        <label for="description">Descripción</label><br>
-        <input type="text" 
-                name="description" 
-                id="description"
-                value="{{ request.form['description'] }}">
-        <label for="description">descripcion</label><br>
-        <input type="submit" value="Guardar" class="btn">
+        {{ form.csrf_token }}
+        <div>
+                {{ form.category.label }}
+                {{ form.category() }}
+                 {% if form.category.errors %}
+                 {% for error in form.category.errors%}
+                 <p>{{ error }}</p>
+                 {% endfor %}
+                 {% endif %}
+        </div>
+        <div>
+                {{ form.description.label }}
+                {{ form.description() }}
+                {% if form.description.errors %}
+                 {% for error in form.description.errors%}
+                 <p>{{ error }}</p>
+                 {% endfor %}
+                 {% endif %}
+        </div>
+        <div>
+                {{ form.submit(class="bth") }}
+        </div>
+        
    </form>
 </div>
 {% endblock %}
