--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(221, 218, 224);
+    background-color: rgb(180, 125, 125);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -30,13 +30,13 @@ nav li a {
     height: 100%;
     text-decoration: none;
     text-align: center;
-    color: black;
+    color: white;
     font-weight: 700;
     padding-top: 10px;
 }
 
 nav li a:hover {
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid white;
 }
 
 .btn {
@@ -44,11 +44,16 @@ nav li a:hover {
     width: 200px;
     padding: 10px;
     border: none;
-    background-color: rgb(62, 234, 117);
+    background-color: rgb(154, 38, 38);
     border-radius: 5px;
     text-decoration: none;
     font-weight: 700;
     text-align: center;
+    color: white;
+}
+.btn:hover{
+    background-color: beige;
+    color: black;
 }
 
 .container {
@@ -75,7 +80,7 @@ nav li a:hover {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: rgb(154, 38, 38);
     color: white;
   }
 
