--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: rgb(180, 125, 125);
+    font-family: 'arial', sans-serif;
+    background-color: white;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -30,13 +30,13 @@ nav li a {
     height: 100%;
     text-decoration: none;
     text-align: center;
-    color: white;
+    color: black;
     font-weight: 700;
     padding-top: 10px;
 }
 
 nav li a:hover {
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid black;
 }
 
 .btn {
