--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -3,6 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome Home</h1>
+<h1><center>Bienvenidos a Abarrotes Maiker</center></h1>
+<img src="" alt="">
 <p>Autor: {{ name }}</p>
 {% endblock %}
