--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,8 @@
             <li><a href="{{ url_for('home.tres') }}">3B</a></li>
             <li><a href="{{ url_for('home.contact') }}">Contact</a></li>
             <li><a href="{{ url_for('home.about') }}">Acerca de</a></li>
+            <li><a href="{{ url_for('product.producto') }}">Producto</a></li>
+            
 
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
             {% if user %}
