--- a/app/templates/product/producto.html
+++ b/app/templates/product/producto.html
@@ -6,7 +6,7 @@ Products
 
 {% block content %}
     <h1>Productos</h1>
-    <a href="{{ url_for('product.create_cat') }}" class="btn">Nueva Producto</a>
+    <a href="{{ url_for('product.create_pro') }}" class="btn">Nuevo Producto</a>
     <h2>Lista de Productos</h2>
     <table id="producto">
         <thead>
