--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -61,28 +61,51 @@ nav li a:hover {
     margin: 0 auto;
 }
 
-#categories {
+#producto {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
   
-  #categories td, #categories th {
+  #producto  td, #producto th {
     border: 1px solid #ddd;
     padding: 8px;
   }
   
-  #categories tr:nth-child(even){background-color: #f2f2f2;}
+  #producto tr:nth-child(even){background-color: #f2f2f2;}
   
-  #categories tr:hover {background-color: #ddd;}
+  #producto tr:hover {background-color: #ddd;}
   
-  #categories th {
+  #producto th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: rgb(154, 38, 38);
     color: white;
   }
+  #proveedor {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #proveedor td, #proveedor th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  #proveedor tr:nth-child(even){background-color: #f2f2f2;}
+  
+  #proveedor tr:hover {background-color: #ddd;}
+  
+  #proveedor th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+  }
+
 
 .form-container {
     width: 50%;
