--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
             <li><a href="{{ url_for('home.contact') }}">Contact</a></li>
             <li><a href="{{ url_for('home.about') }}">Acerca de</a></li>
             <li><a href="{{ url_for('product.producto') }}">Producto</a></li>
+            <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedor</a></li>
             
 
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
