--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -61,22 +61,27 @@ nav li a:hover {
     margin: 0 auto;
 }
 
-#categories {
+#producto {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
   
-  #categories td, #categories th {
+  #producto td, #producto th {
     border: 1px solid #ddd;
     padding: 8px;
   }
+
+  #producto td {
+    border: 1px solid gray;
+    padding: 10px;
+  }
   
-  #categories tr:nth-child(even){background-color: #f2f2f2;}
+  #producto tr:nth-child(even){background-color: #f2f2f2;}
   
-  #categories tr:hover {background-color: #ddd;}
+  #producto tr:hover {background-color: #ddd;}
   
-  #categories th {
+  #producto th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
