--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
             <li><a href="{{ url_for('home.about') }}">Acerca de</a></li>
             <li><a href="{{ url_for('product.producto') }}">Producto</a></li>
             <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedor</a></li>
-            <li><a href="{{ url_for('clientes.clientes') }}">Clientes</a></li>
+            <li><a href="{{ url_for('clientes.cliente') }}">Clientes</a></li>
             
 
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
