--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -3,7 +3,64 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1><center>Bienvenidos a Abarrotes Maiker</center></h1>
-<img src="" alt="">
+<head>
+  <title>Bienvenidos a Abarrotes Maiker</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+    
+    header {
+      background-color: rgb(154, 38, 38);
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    .cta-button {
+      display: inline-block;
+      background-color: #0F9D58;
+      color: #fff;
+      padding: 12px 20px;
+      font-size: 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Bienvenidos a Abarrotes Maiker</h1>
+    <p>Descubre una gran variedad de productos de muy buena calidad con nosotros.</p>
+    
+  </header>
+
+  <!-- Otras secciones del sitio web aquí -->
+
+  <section id="seccion-destacada">
+    <h2>¡Descubre nuestro contenido destacado!</h2>
+    <p>Te ofrecemos una amplia variedad de artículos, videos y cursos para satisfacer tus intereses y necesidades. ¡No te lo pierdas!</p>
+  </section>
+
+  <!-- Otras secciones del sitio web aquí -->
+
+</body>
+
+<img src="img/tienda.jpg" alt="wqdwqd">
 <p>Autor: {{ name }}</p>
 {% endblock %}
+
