--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,17 +10,17 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{{ url_for('home.home') }}">Home</a></li>
-            <li><a href="{{ url_for('home.contact') }}">Contact</a></li>
-            <li><a href="{{ url_for('product.producto') }}">Producto</a></li>
-            <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedor</a></li>
+            <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
+            <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
+            <li><a href="{{ url_for('product.producto') }}">Productos</a></li>
+            <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedores</a></li>
             <li><a href="{{ url_for('clientes.cliente') }}">Clientes</a></li>
             
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
             {% if user %}
             <li><a href="#">Logout</a></li>
             {% else %}
-            <li><a href="{{ url_for('user.login') }}">Login</a></li>
+            <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
             {% endif %}
         </ul>
     </nav>
