--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -5,32 +5,35 @@ Login
 {% endblock title %}
     
 {% block content %}
+<h1><center>Inicia Sesión</center></h1>
 {% for message in get_flashed_messages() %}
 <p>{{ message }}</p>
 {% endfor %}
-<form method="post">
-    {{ form.csrf_token }}
-    <div>
-        {{ form.username.label }}
-        {{ form.username() }}
-        {% if form.username.errors %}
-            {% for error in form.username.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        {{ form.password.label }}
-        {{ form.password() }}
-        {% if form.password.errors %}
-            {% for error in form.password.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        {{ form.submit(class="btn") }}
-    </div>
-</form>
+<div class="form-container">
+    <form method="post">
+        {{ form.csrf_token }}
+        <div>
+            {{ form.username.label }}
+            {{ form.username() }}
+            {% if form.username.errors %}
+                {% for error in form.username.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.password.label }}
+            {{ form.password() }}
+            {% if form.password.errors %}
+                {% for error in form.password.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.submit(class="btn") }}
+        </div>
+    </form>
+</div>
 {% endblock %}
     
