--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -3,48 +3,50 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<h1>Registro</h1>
-<form method="post">
-    {{ form.csrf_token }}
-    <div>
-        {{ form.username.label }}
-        {{ form.username() }}
-        {% if form.username.errors %}
-            {% for error in form.username.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        {{ form.email.label }}
-        {{ form.email() }}
-        {% if form.email.errors %}
-            {% for error in form.email.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        {{ form.password.label }}
-        {{ form.password() }}
-        {% if form.password.errors %}
-            {% for error in form.password.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        {{ form.password_confirm.label }}
-        {{ form.password_confirm() }}
-        {% if form.password_confirm.errors %}
-            {% for error in form.password_confirm.errors %}
-            <p>{{ error }}</p>
-            {% endfor %}
-        {% endif %}
-    </div>
-    <div>
-        {{ form.submit(class="btn") }}
-    </div>
-</form>
+<h1><center>Registrate</center></h1>
+<div class="form-container">
+    <form method="post">
+        {{ form.csrf_token }}
+        <div>
+            {{ form.username.label }}
+            {{ form.username() }}
+            {% if form.username.errors %}
+                {% for error in form.username.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.email.label }}
+            {{ form.email() }}
+            {% if form.email.errors %}
+                {% for error in form.email.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.password.label }}
+            {{ form.password() }}
+            {% if form.password.errors %}
+                {% for error in form.password.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.password_confirm.label }}
+            {{ form.password_confirm() }}
+            {% if form.password_confirm.errors %}
+                {% for error in form.password_confirm.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div>
+            {{ form.submit(class="btn") }}
+        </div>
+    </form>
+</div>
 {% endblock %}
     
