--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,8 +14,7 @@
             <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
             <li><a href="{{ url_for('product.producto') }}">Productos</a></li>
             <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedores</a></li>
-            <li><a href="{{ url_for('clientes.cliente') }}">Clientes</a></li>
-            
+            <li><a href="{{ url_for('cliente.cliente') }}">Clientes</a></li>
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
             {% if user %}
             <li><a href="#">Logout</a></li>
