--- a/app/templates/cliente/cliente.html
+++ b/app/templates/cliente/cliente.html
@@ -6,7 +6,7 @@ Clientes
 
 {% block content %}
     <h1>Clientes</h1>
-    <a href="{{ url_for('clientes.create_cli') }}" class="btn">Nuevo Cliente</a>
+    <a href="{{ url_for('cliente.create_cli') }}" class="btn">Nuevo Cliente</a>
     <h2>Lista de Clientes</h2>
     <table id="cliente">
         <thead>
