--- a/app/templates/compra/compra.html
+++ b/app/templates/compra/compra.html
@@ -15,9 +15,9 @@ Compras
                 <th>id_ticket</th>
                 <th>id_cliente</th>
                 <th>id_producto</th>
-                <th>fecha</th>
-                <th>cantidad</th>
-                <th>total</th>
+                <th>Fecha</th>
+                <th>Cantidad</th>
+                <th>Total</th>
                 <th>Acciones</th>
             </tr>
         </thead>
