--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -60,7 +60,7 @@
 
 </body>
 
-<img src="img/tienda.jpg" alt="wqdwqd">
+<img src="tienda.jpg" alt="wqdwqd">
 <p>Autor: {{ name }}</p>
 {% endblock %}
 
