--- a/app/templates/home/contact.html
+++ b/app/templates/home/contact.html
@@ -31,9 +31,9 @@
       }
   
       .container {
-        max-width: 800px;
+        max-width: 1500px;
         margin: 0 auto;
-        padding: 20px;
+        padding: 0px;
       }
   
       .team-member {
@@ -66,23 +66,23 @@
   
     <div class="container">
       <h2>Nuestra Historia</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla faucibus tellus at est venenatis viverra. In eget purus id lorem luctus cursus.</p>
-      <p>Phasellus vulputate, justo eu consequat gravida, odio est varius ex, at iaculis neque mi ac ex.</p>
+      <p>Somos una tienda que ha surgido en el año de 1995, en el cual tiene una historia muy conmovedora que hizo crecer nuestra tienda</p>
+      <p>Es maravilloso hacer lo que te gusta si tu lo quieres lograr</p>
   
       <h2>Nuestro Equipo</h2>
       <div class="team-member">
         <img src="ruta-del-avatar1.jpg" alt="Miembro del equipo 1">
         <div>
-          <h2>Nombre del Miembro 1</h2>
-          <p>Desarrollador Front-end</p>
+          <h2>Erica Martinez Lopez</h2>
+          <p>Fundadora de la tienda</p>
         </div>
       </div>
   
       <div class="team-member">
         <img src="ruta-del-avatar2.jpg" alt="Miembro del equipo 2">
         <div>
-          <h2>Nombre del Miembro 2</h2>
-          <p>Diseñador Gráfico</p>
+          <h2>Jose Peres Armas</h2>
+          <p>Fundador de la tienda</p>
         </div>
       </div>
     </div>
