--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -17,7 +17,7 @@
       background-color: rgb(154, 38, 38);
       color: #fff;
       text-align: center;
-      padding: 20px;
+      padding: 30px;
     }
 
     h1 {
@@ -28,17 +28,6 @@
     p {
       font-size: 18px;
       line-height: 1.6;
-    }
-
-    .cta-button {
-      display: inline-block;
-      background-color: #0F9D58;
-      color: #fff;
-      padding: 12px 20px;
-      font-size: 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-top: 20px;
     }
   </style>
 </head>
@@ -52,8 +41,8 @@
   <!-- Otras secciones del sitio web aquí -->
 
   <section id="seccion-destacada">
-    <h2>¡Descubre nuestro contenido destacado!</h2>
-    <p>Te ofrecemos una amplia variedad de artículos, videos y cursos para satisfacer tus intereses y necesidades. ¡No te lo pierdas!</p>
+    <h2>¡Descubre nuestro gran contenido de productos!</h2>
+    <p>Te ofrecemos una amplia variedad de productos de muy buena calidad en el cual encontraras lo que nesecites.¡No te lo pierdas!</p>
   </section>
 
   <!-- Otras secciones del sitio web aquí -->
