--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -49,7 +49,6 @@
 
 </body>
 
-<img src="tienda.jpg" alt="wqdwqd">
+<img src="{{ url_for('static', filename='images/tienda.jpg') }}" alt="wqdwqd">
 <p>Autor: {{ name }}</p>
 {% endblock %}
-
