--- a/app/templates/proveedor/proveedor.html
+++ b/app/templates/proveedor/proveedor.html
@@ -8,7 +8,7 @@ Proveedor
     <h1>Proveedores</h1>
     <a href="{{ url_for('proveedor.create_prov') }}" class="btn">Nuevo Proveedor</a>
     <h2>Lista de proveedores</h2>
-    <table id_proveedor="proveedor">
+    <table id="proveedor">
         <thead>
             <tr>
                 <th>ID</th>
