--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -41,14 +41,14 @@
   <!-- Otras secciones del sitio web aquí -->
 
   <section id="seccion-destacada">
-    <h2>¡Descubre nuestro gran contenido de productos!</h2>
-    <p>Te ofrecemos una amplia variedad de productos de muy buena calidad en el cual encontraras lo que nesecites.¡No te lo pierdas!</p>
+    <h2><center>¡Descubre nuestro gran contenido de productos!</center></h2>
+    <p><center>Te ofrecemos una amplia variedad de productos de muy buena calidad en el cual encontraras lo que nesecites.¡No te lo pierdas!</center></h2></p>
   </section>
 
   <!-- Otras secciones del sitio web aquí -->
 
 </body>
 
-<img src="{{ url_for('static', filename='images/tienda.jpg') }}" alt="wqdwqd">
+<img src="{{ url_for('static', filename='images/tienda.jpg') }}" width="100%" alt="wqdwqd">
 <p>Autor: {{ name }}</p>
 {% endblock %}
