--- a/app/templates/product/producto.html
+++ b/app/templates/product/producto.html
@@ -16,6 +16,7 @@ Products
                 <th>Marca</th>
                 <th>Codigo de barras</th>
                 <th>Precio</th>
+                <th>Imagen</th>
                 <th>Acciones</th>
             </tr>
         </thead>
@@ -27,6 +28,7 @@ Products
                     <td>{{ pro.marca_producto }}</td>
                     <td>{{ pro.cb_producto }}</td>
                     <td>{{ pro.precio_producto }}</td>
+                    <td>{{ pro.image }}</td>
                     <td>
                         <a href="{{ url_for('product.update_pro', id_producto=pro.id_producto) }}">
                             <i class="fa fa-pencil"></i>
