--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<h1><center>Registrate</center></h1>
+<h1><center>Registrarse</center></h1>
 <div class="form-container">
     <form method="post">
         {{ form.csrf_token }}
