--- a/app/templates/product/detail.html
+++ b/app/templates/product/detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container">
-    <img src="{{ url_for('static', filename='images/products/' + product.image) }}" alt=""
+    <img src="{{ url_for('static', filename='images/product/' + producto.image) }}" alt=""
     width="300px">
    
 {% endblock %}
