--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,17 +10,23 @@
 <body>
     <nav>
         <ul>
+            {% if user %}
             <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
             <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
-            {% if user %}
             <li><a href="{{ url_for('product.producto') }}">Productos</a></li>
             <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedores</a></li>
             <li><a href="{{ url_for('cliente.cliente') }}">Clientes</a></li>
             <li><a href="{{ url_for('compra.compra') }}">Compra</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a href="{{ url_for('home.home') }}">Cerrar sesión</a></li>
             {% else %}
-            <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
+            {% endif %}
+            {% if user %}
+            {% else %}
+            <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
+            <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
+            <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
+            
             {% endif %}
         </ul>
     </nav>
