--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -17,7 +17,7 @@
       background-color: rgb(154, 38, 38);
       color: #fff;
       text-align: center;
-      padding: 30px;
+      padding: 50px;
     }
 
     h1 {
@@ -49,6 +49,6 @@
 
 </body>
 
-<img src="{{ url_for('static', filename='images/tienda.jpg') }}" width="100%" alt="wqdwqd">
+<img src="{{ url_for('static', filename='images/tienda.png') }}" width="100%" alt="wqdwqd">
 <p>Autor: {{ name }}</p>
 {% endblock %}
