--- a/app/templates/proveedor/create_prov.html
+++ b/app/templates/proveedor/create_prov.html
@@ -5,6 +5,7 @@ Registra nuevo Proveedor
 {% endblock %}
     
 {% block content %}
+<h1><center>Nuevo Proveedor</center></h1>
 <div class="form-container">
    <form method="post">
         {{ form.csrf_token }}
