--- a/templates/product/create_pro.html
+++ b/templates/product/create_pro.html
@@ -5,6 +5,7 @@ Crea Nuevo Producto
 {% endblock %}
     
 {% block content %}
+<h1><center>Nuevo Producto</center></h1>
 <div class="form-container">
    <form method="post">
         {{ form.csrf_token }}
