--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -7,7 +7,20 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
-
+footer {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    padding: 10px 0;
+    color: white;
+    text-align: right; /* Alinea el contenido del footer a la izquierda */
+}
+    .logo-footer {
+        width: 80px; /* Tamaño pequeño */
+        margin-right: 50px; /* Espacio entre el logo y el texto */
+        vertical-align: middle;
+    }
 nav {
     display: flex;
     justify-content: center;
