--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,6 @@
             <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedores</a></li>
             <li><a href="{{ url_for('cliente.cliente') }}">Clientes</a></li>
             <li><a href="{{ url_for('compra.compra') }}">Compra</a></li>
-            <li><a href="{{ url_for('home.home') }}"">Cerrar Sesión</a></li>
-            {% else %}
-            <li><a href="{{ url_for('user.register') }}">Registro</a></li>
-            <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
             <li><a href="{{ url_for('home.home') }}">Cerrar sesión</a></li>
             {% else %}
             {% endif %}
@@ -30,6 +26,7 @@
             <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
             <li><a href="{{ url_for('user.register') }}">Registro</a></li>
             <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
+            
             {% endif %}
         </ul>
     </nav>
@@ -37,5 +34,13 @@
         {% block content %}
         {% endblock %}
     </div>
+    <footer>
+        <img src="{{ url_for('static', filename='images/maiker.jpg')}}" alt="Logo de Mi Sitio" class="logo-footer">
+
+        <p>© 2023 Todos los derechos reservados.</p>
+        <br>
+        <p><a href="https://www.bing.com/search?pglt=41&q=uttlaxcala&cvid=9028f3c5c43846fd88b1616c2eb7ecde&aqs=edge.1.69i57j0l5j69i60l3.3684j0j1&FORM=ANAB01&PC=ASTS&cp=19.376047%7E-97.953324&lvl=16.6">Visita nuestro lugar</a></p>
+        
+    </footer>
 </body>
 </html>
