--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -17,7 +17,16 @@
       background-color: rgb(154, 38, 38);
       color: #fff;
       text-align: center;
-      padding: 50px;
+      padding: 40px;
+    }
+    .footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
 
     h1 {
@@ -31,13 +40,13 @@
     }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Bienvenidos a Abarrotes Maiker</h1>
-    <p>Descubre una gran variedad de productos de muy buena calidad con nosotros.</p>
-    
+    <p>Descubre una gran variedad de productos de muy buena calidad con nosotros.</p> 
   </header>
-
+  
   <!-- Otras secciones del sitio web aquí -->
 
   <section id="seccion-destacada">
@@ -49,6 +58,6 @@
 
 </body>
 
-<img src="{{ url_for('static', filename='images/tienda.png') }}" width="100%" alt="wqdwqd">
+<img src="{{ url_for('static', filename='images/tienda.jpg') }}" width="100%" alt="wqdwqd">
 <p>Autor: {{ name }}</p>
 {% endblock %}
