--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -26,7 +26,7 @@
             {% endif %}
         </div>
         <div>
-            {{ form.rol.label }}
+            {{ form.role.label }}
             {{ form.rol() }}
         </div>
         <div>
