--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -73,7 +73,7 @@
       <div class="team-member">
         <img src="{{ url_for('static', filename='images/persona 1.png')}}"" alt="Miembro del equipo 1">
         <div>
-          <h2>Erica Martinez Lopez</h2>
+          <h2>Erika Vazquez Acosta</h2>
           <p>Fundadora de la tienda</p>
         </div>
       </div>
@@ -81,7 +81,7 @@
       <div class="team-member">
         <img src="{{ url_for('static', filename='images/persona2.jpg')}}"" alt="Miembro del equipo 2">
         <div>
-          <h2>Jose Peres Armas</h2>
+          <h2>Gabriela Vazquez Acosta</h2>
           <p>Fundador de la tienda</p>
         </div>
       </div>
