--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -27,7 +27,7 @@
         </div>
         <div>
             {{ form.role.label }}
-            {{ form.rol() }}
+            {{ form.role() }}
         </div>
         <div>
             {{ form.password.label }}
