--- a/app/templates/home/contact.html
+++ b/app/templates/home/contact.html
@@ -79,7 +79,7 @@
       </div>
   
       <div class="team-member">
-        <img src="{{ url_for('static', filename='images/persona2.jpg')}}"" alt="Miembro del equipo 2">
+        <img src="{{ url_for('static', filename='images/cajera1.jpg')}}"" alt="Miembro del equipo 2">
         <div>
           <h2>Gabriela Vazquez Acosta</h2>
           <p>Fundador de la tienda</p>
