--- a/app/templates/home/contact.html
+++ b/app/templates/home/contact.html
@@ -66,12 +66,12 @@
   
     <div class="container">
       <h2>Nuestra Historia</h2>
-      <p>Somos una tienda que ha surgido en el año de 1995, en el cual tiene una historia muy conmovedora que hizo crecer nuestra tienda</p>
+      <p>Fundada hace 10 en abril de 2013, fue un proyecto inesperado, las circuntacias de la fue la vida fue que la orillo a poner el negocio.</p>
       <p>Es maravilloso hacer lo que te gusta si tu lo quieres lograr</p>
   
       <h2>Nuestro Equipo</h2>
       <div class="team-member">
-        <img src="{{ url_for('static', filename='images/persona 1.png')}}"" alt="Miembro del equipo 1">
+        <img src="{{ url_for('static', filename='images/admin1.jpg')}}"" alt="Miembro del equipo 1">
         <div>
           <h2>Erika Vazquez Acosta</h2>
           <p>Fundadora de la tienda</p>
@@ -177,16 +177,16 @@
       <div class="contact-info">
         <div class="contact-item">
           <img src="{{ url_for('static', filename='images/whatsapp.png')}}" alt="WhatsApp">
-          <a href="https://wa.me/1234567890">WhatsApp: +522471265587</a>
+          <a href="https://wa.me/1234567890">WhatsApp: +522411578250</a>
         </div>
     
         <div class="contact-item">
           <img src="{{ url_for('static', filename='images/gmail.png')}}"" alt="Correo electrónico">
-          <a href="mailto:contacto@ejemplo.com">Correo electrónico: eduardodelarosa188@gmail.com</a>
+          <a href="mailto:contacto@ejemplo.com">Correo electrónico: erikaacosta1509@icloud.com</a>
         </div>
     
         <div class="social-icons">
-          <a href="https://www.facebook.com" target="_blank"><img src="{{ url_for('static', filename='images/facebook.png')}}" width="100%" alt="Facebook"></a>
+          <a href="https://www.facebook.com/erika.vazquezacosta.31" target="_blank"><img src="{{ url_for('static', filename='images/facebook.png')}}" width="100%" alt="Facebook"></a>
           <a href="https://twitter.com" target="_blank"><img src="{{ url_for('static', filename='images/twitter.png')}}" width="100%" alt="Twitter"></a>
           <a href="https://www.instagram.com" target="_blank"><img src="{{ url_for('static', filename='images/instagram.jpg')}}" width="100%" alt="Instagram"></a>
         </div>
